--- a/src/css/main.css
+++ b/src/css/main.css
@@ -155,7 +155,7 @@ body{
   }
 
   .normalCPM {
-    background-color: #4fcc9c;
+    background-color: #9bc55b;
     font-weight:bold;
     width: 100px;
     text-align: center;
